Fix displaying of relevant parts in overlapping categories

--- a/popup/show_urls.css
+++ b/popup/show_urls.css
@@ -123,7 +123,7 @@ html, body {
 }
 
 .forlytics, .first-third-syncing {
-  color: darkorange;
+  color: gray;
 }
 
 .identifying.basic-tracking, .identifying.tracking-by-tracker, .identifying.first-syncing, .identifying.third-syncing {
